# tui

./: CMakeLists.txt  CMakePresets.json  LICENSE
examples/: example.c
include/: tui.h
src/: tui_core.c  tui_draw.c  tui_internal.h  tui_layout.c  tui_render.c  tui_style.c  tui_terminal.c  tui_theme.c  tui_widgets.c
